--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://doodleboii.github.io/weatherapp",
   "name": "weatherapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -13,7 +16,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/material": "^6.1.6",
+    "@mui/icons-material": "^6.1.7",
+    "@mui/material": "^6.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
